# markTxn

./: README.md
markTxn/: CMakeLists.txt  README.txt
markTxn/include/: markTxn.hpp
markTxn/ricardian/: markTxn.clauses.md  markTxn.contracts.md
markTxn/src/: CMakeLists.txt  markTxn.cpp
